--- a/1B/reliability_engineering_demo.ipynb
+++ b/1B/reliability_engineering_demo.ipynb
@@ -55,9 +55,9 @@
           "text": [
             "\n",
             "Available models:\n",
-            "NAME           ID              SIZE      MODIFIED    \n",
-            "qwen3:4b       359d7dd4bcda    2.5 GB    2 hours ago    \n",
-            "llama3.2:1b    baf6a787fdff    1.3 GB    3 hours ago\n",
+            "NAME           ID              SIZE      MODIFIED   \n",
+            "qwen3:4b       359d7dd4bcda    2.5 GB    2 days ago    \n",
+            "llama3.2:1b    baf6a787fdff    1.3 GB    2 days ago\n",
             "\n"
           ]
         }
@@ -127,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -171,7 +171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -219,7 +219,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -240,81 +240,6 @@
             "[Message 1]\n",
             "Input: I've been trying to reset my password for 3 days now!\n",
             "    The mobile a...\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\u001b[92m[INFO]\u001b[0m Extraction successful\n",
-            "\u001b[90m[DEBUG]\u001b[0m Extracting from: \n",
-            "    Hi, just wanted to say the new Pro subscripti...\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "  ✓ Extracted SupportTicket:\n",
-            "    category:  account\n",
-            "    priority:  high\n",
-            "    summary:   Customer has been unable to reset their password for 3 days ...\n",
-            "    entities:  ['mobile app', 'Forgot Password', 'Order #12345']\n",
-            "    sentiment: -0.90\n",
-            "-----------------------------------------------------------------\n",
-            "\n",
-            "[Message 2]\n",
-            "Input: Hi, just wanted to say the new Pro subscription is amazing!\n",
-            "    The ex...\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\u001b[92m[INFO]\u001b[0m Extraction successful\n",
-            "\u001b[90m[DEBUG]\u001b[0m Extracting from: \n",
-            "    My invoice shows €299 but I was charged €399....\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "  ✓ Extracted SupportTicket:\n",
-            "    category:  account\n",
-            "    priority:  medium\n",
-            "    summary:   The customer asks if they can add additional team members to...\n",
-            "    entities:  ['Pro subscription', 'export feature']\n",
-            "    sentiment: +1.00\n",
-            "-----------------------------------------------------------------\n",
-            "\n",
-            "[Message 3]\n",
-            "Input: My invoice shows €299 but I was charged €399. Please fix this \n",
-            "    imm...\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\u001b[92m[INFO]\u001b[0m Extraction successful\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "  ✓ Extracted SupportTicket:\n",
-            "    category:  billing\n",
-            "    priority:  high\n",
-            "    summary:   Customer reports an invoice showing €299 but charged €399, w...\n",
-            "    entities:  ['ACC-2024-789']\n",
-            "    sentiment: -0.90\n",
-            "-----------------------------------------------------------------\n"
           ]
         }
       ],
@@ -398,7 +323,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -471,7 +396,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -528,7 +453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -759,7 +684,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -832,7 +757,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -958,7 +883,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1033,7 +958,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1125,7 +1050,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "jupyter-env",
+      "display_name": "guardrails-env",
       "language": "python",
       "name": "python3"
     },
@@ -1139,7 +1064,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.11"
+      "version": "3.12.12"
     }
   },
   "nbformat": 4,
