--- a/1B/reliability_engineering_demo.ipynb
+++ b/1B/reliability_engineering_demo.ipynb
@@ -219,7 +219,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -240,6 +240,81 @@
             "[Message 1]\n",
             "Input: I've been trying to reset my password for 3 days now!\n",
             "    The mobile a...\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\u001b[92m[INFO]\u001b[0m Extraction successful\n",
+            "\u001b[90m[DEBUG]\u001b[0m Extracting from: \n",
+            "    Hi, just wanted to say the new Pro subscripti...\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "  ✓ Extracted SupportTicket:\n",
+            "    category:  account\n",
+            "    priority:  high\n",
+            "    summary:   Customer has been unable to reset their password for 3 days ...\n",
+            "    entities:  ['mobile app', 'Forgot Password', 'Order #12345']\n",
+            "    sentiment: -0.80\n",
+            "-----------------------------------------------------------------\n",
+            "\n",
+            "[Message 2]\n",
+            "Input: Hi, just wanted to say the new Pro subscription is amazing!\n",
+            "    The ex...\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\u001b[92m[INFO]\u001b[0m Extraction successful\n",
+            "\u001b[90m[DEBUG]\u001b[0m Extracting from: \n",
+            "    My invoice shows €299 but I was charged €399....\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "  ✓ Extracted SupportTicket:\n",
+            "    category:  account\n",
+            "    priority:  medium\n",
+            "    summary:   Customer wants to add more team members to their Pro account...\n",
+            "    entities:  ['Pro subscription', 'export feature']\n",
+            "    sentiment: +0.90\n",
+            "-----------------------------------------------------------------\n",
+            "\n",
+            "[Message 3]\n",
+            "Input: My invoice shows €299 but I was charged €399. Please fix this \n",
+            "    imm...\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\u001b[92m[INFO]\u001b[0m Extraction successful\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "  ✓ Extracted SupportTicket:\n",
+            "    category:  billing\n",
+            "    priority:  high\n",
+            "    summary:   Customer reports being charged €399 instead of €299 on invoi...\n",
+            "    entities:  ['ACC-2024-789']\n",
+            "    sentiment: -0.80\n",
+            "-----------------------------------------------------------------\n"
           ]
         }
       ],
@@ -323,7 +398,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -349,21 +424,22 @@
             "   ticket.category  → 'billing'\n",
             "   ticket.priority  → Priority.HIGH  (Enum, not string)\n",
             "   ticket.sentiment → -1.0  (float, constrained to [-1, 1])\n",
-            "   ticket.entities  → ['Order #99999']  (List[str])\n",
+            "   ticket.entities  → ['subscription', '99999']  (List[str])\n",
             "\n",
             "2. Export to JSON (for APIs):\n",
             "{\n",
             "  \"category\": \"billing\",\n",
             "  \"priority\": \"high\",\n",
-            "  \"summary\": \"Customer wants to cancel subscription immediately as order #99999 never arrived and is fraudulent.\",\n",
+            "  \"summary\": \"Customer demands immediate cancellation of subscription due to order #99999 never arriving and fraud claim.\",\n",
             "  \"entities\": [\n",
-            "    \"Order #99999\"\n",
+            "    \"subscription\",\n",
+            "    \"99999\"\n",
             "  ],\n",
             "  \"sentiment\": -1.0\n",
             "}\n",
             "\n",
             "3. Export to dict (for databases):\n",
-            "{'category': 'billing', 'priority': <Priority.HIGH: 'high'>, 'summary': 'Customer wants to cancel subscription immediately as order #99999 never arrived and is fraudulent.', 'entities': ['Order #99999'], 'sentiment': -1.0}\n"
+            "{'category': 'billing', 'priority': <Priority.HIGH: 'high'>, 'summary': 'Customer demands immediate cancellation of subscription due to order #99999 never arriving and fraud claim.', 'entities': ['subscription', '99999'], 'sentiment': -1.0}\n"
           ]
         }
       ],
@@ -396,7 +472,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -453,7 +529,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -493,7 +569,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "  ✓ passed → category: technical\n",
+            "  ✓ passed → category: shipping\n",
             "\n"
           ]
         },
@@ -684,7 +760,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
